# switch

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  qt-display.cpp  qt-display.hpp  switch-ai-tracker.hpp  switch-ai-tracker.mm  switch-automation-engine.hpp  switch-motion-manager.hpp  switcher-dock.cpp  switcher-dock.hpp  switcher-remote-manager.cpp  switcher-remote-manager.hpp  switcher-remote-renderer.cpp  switcher-settings.cpp  switcher-settings.hpp  switcher-ui.cpp  switcher-ui.hpp  switcher-workspace.cpp  switcher-workspace.hpp
.github/scripts/: Build-Windows.ps1  Package-Windows.ps1
cmake/common/: bootstrap.cmake  buildspec_common.cmake
cmake/macos/: helpers.cmake  obs-bootstrap-project-include.cmake
cmake/windows/resources/: installer-Windows.iss.in
data/locale/: de-DE.ini  en-US.ini  es-ES.ini  zh-CN.ini
data/models/: manifest.json
data/remote/web/: index.html
data/scripts/: download-motion-model.ps1
docs/: example-integration-plan.md  release-checklist.md  vendor-api.md
remote-helper/: go.mod  main.go
script/: build_and_run.sh  download_motion_model.sh  verify_windows_release.ps1
src/automation/: switch-automation-engine.cpp  switch-automation-model.cpp  switch-automation-model.hpp  switch-osc.cpp  switch-osc.hpp
src/module/: switcher-dock.cpp  switcher-dock.hpp  switcher-vendor-api.inc
src/motion/: switch-ai-tracker.cpp  switch-motion-manager.cpp  switch-motion-manager.hpp
src/obs/: obs-websocket-api.h
src/remote/: switcher-remote-renderer.hpp
src/remote/helper/: main.go  main_test.go
src/ui/: qt-display.cpp  switcher-ui.cpp  switcher-ui.hpp
src/vertical/: switch-canvas-manager.cpp  switch-canvas-manager.hpp
src/workspace/: switcher-workspace.cpp  switcher-workspace.hpp
tests/: CMakeLists.txt  check-locale-keys.cmake  check-vendor-api-contract.cmake  switch-canvas-manager-stub.cpp  test-automation-model.cpp
